exports[`Post should exist 1`] = `
<article
  className="post-item"
  itemProp="blogPost"
  itemScope="itemscope"
  itemType="http://schema.org/BlogPosting"
  role="article">
  <a
    className="datetime"
    onClick={[Function bound handleClick]}
    style={Object {}}>
    <meta
      content={undefined}
      itemProp="datePublished" />
    <time
      dateTime={undefined}>
      <span
        className="day">
         
         
      </span>
      <span
        className="month-year">
         
         
         
      </span>
    </time>
  </a>
  <div
    className="content">
    <a
      onClick={[Function bound handleClick]}
      style={Object {}}>
      <h2
        className="post-title"
        itemProp="name" />
    </a>
    <p
      className="description">
      undefined 
      <a
        className="link"
        onClick={[Function bound handleClick]}
        style={Object {}}>
        Read More...
      </a>
    </p>
    <div
      className="tags" />
  </div>
</article>
`;

exports[`Post should render props correctly 1`] = `
<article
  className="post-item"
  itemProp="blogPost"
  itemScope="itemscope"
  itemType="http://schema.org/BlogPosting"
  role="article">
  <a
    className="datetime"
    onClick={[Function bound handleClick]}
    style={Object {}}>
    <meta
      content="1475459431"
      itemProp="datePublished" />
    <time
      dateTime="1475459431">
      <span
        className="day">
         
        02
         
      </span>
      <span
        className="month-year">
         
        October
         
        2016
         
      </span>
    </time>
  </a>
  <div
    className="content">
    <a
      onClick={[Function bound handleClick]}
      style={Object {}}>
      <h2
        className="post-title"
        itemProp="name">
        tester
      </h2>
    </a>
    <p
      className="description">
      very test much wow 
      <a
        className="link"
        onClick={[Function bound handleClick]}
        style={Object {}}>
        View on GitHub...
      </a>
    </p>
    <div
      className="tags">
      <span>
        web
      </span>
      <span>
        react
      </span>
    </div>
  </div>
</article>
`;
